--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,16 @@
 
     <groupId>org.example</groupId>
     <artifactId>marion-rpc-demo</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>rpc-common</module>
+        <module>rpc-codec</module>
+        <module>rpc-transport</module>
+        <module>rpc-proto</module>
+        <module>rpc-server</module>
+        <module>rpc-client</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
