--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>rpc-proto</module>
         <module>rpc-server</module>
         <module>rpc-client</module>
+        <module>rpc-example</module>
     </modules>
 
     <properties>
